[package]
name = "nsctrld"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/nsctrld"
homepage = "https://github.com/koute/nsctrld"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A userspace daemon for the Nintendo Switch Pro Controller"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nsinput = { path = "nsinput" }
env_logger = "0.7"
log = "0.4"
ctrlc = { version = "3", features = ["termination"] }
linux-input = "0.1"
libc = "0.2"

[workspace]
members = [".", "nsinput"]
